--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to Tongyu's Homepage!
+title: Welcome to litongyu008's Homepage!
 description: Feel free to bookmark this to keep an eye on my project updates
